can create new tags now

--- a/ChachaT/Profile.storyboard
+++ b/ChachaT/Profile.storyboard
@@ -68,33 +68,32 @@
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <view tag="1" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="f8Q-9k-XpF" customClass="TagListView" customModule="TagListView">
+                                        <rect key="frame" x="179" y="101" width="242" height="24"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="tagBackgroundColor">
+                                                <color key="value" red="0.0039215686269999999" green="0.76470588240000004" blue="0.65490196079999996" alpha="0.66000000000000003" colorSpace="calibratedRGB"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="textColor">
+                                                <color key="value" red="0.96470588239999999" green="0.97254901959999995" blue="0.98431372549999996" alpha="1" colorSpace="calibratedRGB"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="9"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="enableRemoveButton" value="NO"/>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="paddingY">
+                                                <real key="value" value="6"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </view>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstItem="fSZ-o2-TeW" firstAttribute="centerY" secondItem="egt-Ig-axq" secondAttribute="centerY" id="3WE-vv-pA3"/>
                                     <constraint firstItem="n6T-Fz-CxS" firstAttribute="top" secondItem="egt-Ig-axq" secondAttribute="top" constant="20" id="T8O-s8-2aI"/>
                                     <constraint firstItem="n6T-Fz-CxS" firstAttribute="centerX" secondItem="egt-Ig-axq" secondAttribute="centerX" id="UiS-f9-WsN"/>
                                     <constraint firstItem="fSZ-o2-TeW" firstAttribute="centerX" secondItem="egt-Ig-axq" secondAttribute="centerX" id="Ygz-aP-hyd"/>
                                 </constraints>
-                            </view>
-                            <view tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f8Q-9k-XpF" customClass="TagListView" customModule="TagListView">
-                                <rect key="frame" x="179" y="288" width="242" height="24"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="tagBackgroundColor">
-                                        <color key="value" red="0.0039215686269999999" green="0.76470588240000004" blue="0.65490196079999996" alpha="0.66000000000000003" colorSpace="calibratedRGB"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="textColor">
-                                        <color key="value" red="0.96470588239999999" green="0.97254901959999995" blue="0.98431372549999996" alpha="1" colorSpace="calibratedRGB"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                        <real key="value" value="9"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="boolean" keyPath="enableRemoveButton" value="NO"/>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="paddingY">
-                                        <real key="value" value="6"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
                             </view>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lRp-GR-lFB">
                                 <rect key="frame" x="0.0" y="108" width="600" height="79"/>
@@ -194,7 +193,6 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="f8Q-9k-XpF" firstAttribute="centerX" secondItem="qcq-BR-zCX" secondAttribute="centerX" id="0jf-fg-qhJ"/>
                             <constraint firstItem="34F-hU-9oS" firstAttribute="centerY" secondItem="qcq-BR-zCX" secondAttribute="centerY" id="2mX-BX-vpe"/>
                             <constraint firstItem="hfh-eM-SNs" firstAttribute="top" secondItem="in9-u2-WDu" secondAttribute="bottom" id="E8f-SK-i7h"/>
                             <constraint firstItem="egt-Ig-axq" firstAttribute="leading" secondItem="qcq-BR-zCX" secondAttribute="leading" id="HCS-0Y-HSL"/>
@@ -204,7 +202,6 @@
                             <constraint firstAttribute="trailing" secondItem="lRp-GR-lFB" secondAttribute="trailing" id="eO9-nB-R99"/>
                             <constraint firstItem="lRp-GR-lFB" firstAttribute="top" secondItem="qcq-BR-zCX" secondAttribute="top" id="gnd-UR-NXa"/>
                             <constraint firstItem="hfh-eM-SNs" firstAttribute="leading" secondItem="qcq-BR-zCX" secondAttribute="leading" id="k5W-WH-1AA"/>
-                            <constraint firstItem="f8Q-9k-XpF" firstAttribute="centerY" secondItem="qcq-BR-zCX" secondAttribute="centerY" id="k8t-X8-cCt"/>
                             <constraint firstAttribute="trailing" secondItem="hfh-eM-SNs" secondAttribute="trailing" id="n3h-Ec-nK4"/>
                             <constraint firstItem="34F-hU-9oS" firstAttribute="centerX" secondItem="qcq-BR-zCX" secondAttribute="centerX" id="osL-TT-jvf"/>
                             <constraint firstItem="lRp-GR-lFB" firstAttribute="top" secondItem="hfh-eM-SNs" secondAttribute="bottom" id="r0R-cz-WVy"/>
