--- a/ChachaT/Profile.storyboard
+++ b/ChachaT/Profile.storyboard
@@ -52,30 +52,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="egt-Ig-axq">
-                                <rect key="frame" x="0.0" y="187" width="600" height="413"/>
-                                <subviews>
-                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fSZ-o2-TeW">
-                                        <rect key="frame" x="282" y="192" width="37" height="30"/>
-                                        <state key="normal" title="Done"/>
-                                        <connections>
-                                            <action selector="doneSpecialtyButtonPressed:" destination="mYP-fS-yh2" eventType="touchUpInside" id="qFt-8Z-kxK"/>
-                                        </connections>
-                                    </button>
-                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n6T-Fz-CxS">
-                                        <rect key="frame" x="263" y="20" width="75" height="21"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstItem="fSZ-o2-TeW" firstAttribute="centerY" secondItem="egt-Ig-axq" secondAttribute="centerY" id="3WE-vv-pA3"/>
-                                    <constraint firstItem="n6T-Fz-CxS" firstAttribute="top" secondItem="egt-Ig-axq" secondAttribute="top" constant="20" id="T8O-s8-2aI"/>
-                                    <constraint firstItem="n6T-Fz-CxS" firstAttribute="centerX" secondItem="egt-Ig-axq" secondAttribute="centerX" id="UiS-f9-WsN"/>
-                                    <constraint firstItem="fSZ-o2-TeW" firstAttribute="centerX" secondItem="egt-Ig-axq" secondAttribute="centerX" id="Ygz-aP-hyd"/>
-                                </constraints>
-                            </view>
                             <view tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f8Q-9k-XpF" customClass="TagListView" customModule="TagListView">
                                 <rect key="frame" x="0.0" y="187" width="600" height="413"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -195,21 +171,17 @@
                         <constraints>
                             <constraint firstItem="34F-hU-9oS" firstAttribute="centerY" secondItem="qcq-BR-zCX" secondAttribute="centerY" id="2mX-BX-vpe"/>
                             <constraint firstItem="hfh-eM-SNs" firstAttribute="top" secondItem="in9-u2-WDu" secondAttribute="bottom" id="E8f-SK-i7h"/>
-                            <constraint firstItem="f8Q-9k-XpF" firstAttribute="top" secondItem="egt-Ig-axq" secondAttribute="top" id="FSG-Nf-qDH"/>
-                            <constraint firstItem="egt-Ig-axq" firstAttribute="leading" secondItem="qcq-BR-zCX" secondAttribute="leading" id="HCS-0Y-HSL"/>
                             <constraint firstItem="lRp-GR-lFB" firstAttribute="leading" secondItem="qcq-BR-zCX" secondAttribute="leading" id="HVk-tz-WYd"/>
-                            <constraint firstItem="egt-Ig-axq" firstAttribute="top" secondItem="lRp-GR-lFB" secondAttribute="bottom" id="K0v-5o-hSp"/>
-                            <constraint firstItem="f8Q-9k-XpF" firstAttribute="leading" secondItem="egt-Ig-axq" secondAttribute="leading" id="TsA-nA-9EP"/>
-                            <constraint firstItem="f8Q-9k-XpF" firstAttribute="bottom" secondItem="egt-Ig-axq" secondAttribute="bottom" id="aA7-FX-yUl"/>
-                            <constraint firstItem="Fr5-lD-rRN" firstAttribute="top" secondItem="egt-Ig-axq" secondAttribute="bottom" id="b9j-in-7rh"/>
+                            <constraint firstItem="Fr5-lD-rRN" firstAttribute="top" secondItem="f8Q-9k-XpF" secondAttribute="bottom" id="MHT-Rm-VsH"/>
+                            <constraint firstItem="f8Q-9k-XpF" firstAttribute="top" secondItem="lRp-GR-lFB" secondAttribute="bottom" id="PNm-RT-Daa"/>
+                            <constraint firstAttribute="trailing" secondItem="f8Q-9k-XpF" secondAttribute="trailing" id="WX0-sb-6DX"/>
+                            <constraint firstItem="f8Q-9k-XpF" firstAttribute="leading" secondItem="qcq-BR-zCX" secondAttribute="leading" id="c5j-Pq-DJg"/>
                             <constraint firstAttribute="trailing" secondItem="lRp-GR-lFB" secondAttribute="trailing" id="eO9-nB-R99"/>
                             <constraint firstItem="lRp-GR-lFB" firstAttribute="top" secondItem="qcq-BR-zCX" secondAttribute="top" id="gnd-UR-NXa"/>
                             <constraint firstItem="hfh-eM-SNs" firstAttribute="leading" secondItem="qcq-BR-zCX" secondAttribute="leading" id="k5W-WH-1AA"/>
                             <constraint firstAttribute="trailing" secondItem="hfh-eM-SNs" secondAttribute="trailing" id="n3h-Ec-nK4"/>
                             <constraint firstItem="34F-hU-9oS" firstAttribute="centerX" secondItem="qcq-BR-zCX" secondAttribute="centerX" id="osL-TT-jvf"/>
                             <constraint firstItem="lRp-GR-lFB" firstAttribute="top" secondItem="hfh-eM-SNs" secondAttribute="bottom" id="r0R-cz-WVy"/>
-                            <constraint firstAttribute="trailing" secondItem="egt-Ig-axq" secondAttribute="trailing" id="rrR-J3-sOt"/>
-                            <constraint firstItem="f8Q-9k-XpF" firstAttribute="trailing" secondItem="egt-Ig-axq" secondAttribute="trailing" id="tOW-ze-pSj"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
@@ -230,12 +202,9 @@
                         <outlet property="tagChosenViewWidthConstraint" destination="5AO-FB-Xpb" id="MQT-ER-5rL"/>
                         <outlet property="theActivityIndicator" destination="34F-hU-9oS" id="xVE-me-lTW"/>
                         <outlet property="theAddToProfileButton" destination="QqA-ji-qaT" id="sEk-YM-Gwa"/>
-                        <outlet property="theCategoryLabel" destination="n6T-Fz-CxS" id="fyJ-E2-7vb"/>
                         <outlet property="theChosenTagHolderView" destination="KUC-4Y-beP" id="gL6-U7-idc"/>
                         <outlet property="theDoneButton" destination="Ttp-mV-XcO" id="EXm-Cf-SmR"/>
-                        <outlet property="theDoneSpecialtyButton" destination="fSZ-o2-TeW" id="oDs-Ec-Q8M"/>
                         <outlet property="theScrollView" destination="lRp-GR-lFB" id="Qqz-kT-cpp"/>
-                        <outlet property="theSpecialtyTagEnviromentHolderView" destination="egt-Ig-axq" id="AFn-el-v0l"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fZx-kU-P0C" userLabel="First Responder" sceneMemberID="firstResponder"/>
