--- a/ChachaT/Profile.storyboard
+++ b/ChachaT/Profile.storyboard
@@ -52,23 +52,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" placeholder="Search Tags" translatesAutoresizingMaskIntoConstraints="NO" id="hfh-eM-SNs">
-                                <rect key="frame" x="0.0" y="64" width="600" height="44"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="chx-xf-2gq"/>
-                                </constraints>
-                                <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <outlet property="delegate" destination="mYP-fS-yh2" id="nK3-lC-h0h"/>
-                                </connections>
-                            </searchBar>
-                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="34F-hU-9oS">
-                                <rect key="frame" x="290" y="290" width="20" height="20"/>
-                            </activityIndicatorView>
-                            <view tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f8Q-9k-XpF" customClass="TagListView" customModule="TagListView">
-                                <rect key="frame" x="0.0" y="187" width="600" height="413"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </view>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lRp-GR-lFB">
                                 <rect key="frame" x="0.0" y="108" width="600" height="79"/>
                                 <subviews>
@@ -83,8 +66,8 @@
                                                     <constraint firstAttribute="height" constant="24" id="83c-M0-ifX"/>
                                                 </constraints>
                                             </view>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QqA-ji-qaT">
-                                                <rect key="frame" x="34" y="25" width="96" height="30"/>
+                                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QqA-ji-qaT">
+                                                <rect key="frame" x="38" y="25" width="96" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="30" id="9FK-yG-8HR"/>
                                                     <constraint firstAttribute="width" constant="46" id="Ewt-5H-yay"/>
@@ -138,14 +121,40 @@
                                     </mask>
                                 </variation>
                             </scrollView>
+                            <searchBar contentMode="redraw" placeholder="Search Tags" translatesAutoresizingMaskIntoConstraints="NO" id="hfh-eM-SNs">
+                                <rect key="frame" x="0.0" y="64" width="600" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="chx-xf-2gq"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="mYP-fS-yh2" id="nK3-lC-h0h"/>
+                                </connections>
+                            </searchBar>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="34F-hU-9oS">
+                                <rect key="frame" x="290" y="290" width="20" height="20"/>
+                            </activityIndicatorView>
+                            <view tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f8Q-9k-XpF" customClass="TagListView" customModule="TagListView">
+                                <rect key="frame" x="0.0" y="238" width="600" height="362"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Tags" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eNU-C0-kVV">
+                                <rect key="frame" x="262" y="195" width="76" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="34F-hU-9oS" firstAttribute="centerY" secondItem="qcq-BR-zCX" secondAttribute="centerY" id="2mX-BX-vpe"/>
+                            <constraint firstItem="eNU-C0-kVV" firstAttribute="centerX" secondItem="qcq-BR-zCX" secondAttribute="centerX" id="4TK-8v-2JD"/>
                             <constraint firstItem="hfh-eM-SNs" firstAttribute="top" secondItem="in9-u2-WDu" secondAttribute="bottom" id="E8f-SK-i7h"/>
+                            <constraint firstItem="f8Q-9k-XpF" firstAttribute="top" secondItem="eNU-C0-kVV" secondAttribute="bottom" constant="22" id="G1Z-BX-GGa"/>
                             <constraint firstItem="lRp-GR-lFB" firstAttribute="leading" secondItem="qcq-BR-zCX" secondAttribute="leading" id="HVk-tz-WYd"/>
                             <constraint firstItem="Fr5-lD-rRN" firstAttribute="top" secondItem="f8Q-9k-XpF" secondAttribute="bottom" id="MHT-Rm-VsH"/>
                             <constraint firstItem="f8Q-9k-XpF" firstAttribute="top" secondItem="lRp-GR-lFB" secondAttribute="bottom" id="PNm-RT-Daa"/>
+                            <constraint firstItem="eNU-C0-kVV" firstAttribute="top" secondItem="lRp-GR-lFB" secondAttribute="bottom" constant="8" id="URX-cH-u6K"/>
                             <constraint firstAttribute="trailing" secondItem="f8Q-9k-XpF" secondAttribute="trailing" id="WX0-sb-6DX"/>
                             <constraint firstItem="f8Q-9k-XpF" firstAttribute="leading" secondItem="qcq-BR-zCX" secondAttribute="leading" id="c5j-Pq-DJg"/>
                             <constraint firstAttribute="trailing" secondItem="lRp-GR-lFB" secondAttribute="trailing" id="eO9-nB-R99"/>
@@ -158,6 +167,7 @@
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="gnd-UR-NXa"/>
+                                <exclude reference="PNm-RT-Daa"/>
                             </mask>
                         </variation>
                     </view>
@@ -177,6 +187,7 @@
                         <outlet property="theChosenTagHolderView" destination="KUC-4Y-beP" id="gL6-U7-idc"/>
                         <outlet property="theDoneButton" destination="Ttp-mV-XcO" id="EXm-Cf-SmR"/>
                         <outlet property="theScrollView" destination="lRp-GR-lFB" id="Qqz-kT-cpp"/>
+                        <outlet property="theYourTagsLabel" destination="eNU-C0-kVV" id="xXP-57-Ool"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fZx-kU-P0C" userLabel="First Responder" sceneMemberID="firstResponder"/>
